--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -170,6 +170,13 @@ html {
   scrollbar-width: thin;
 }
 
+.thin-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary-color) var(--div-bg-color);
+}
+.thin-scroll::-webkit-scrollbar { width: 5px; height: 5px; }
+.thin-scroll::-webkit-scrollbar-thumb { background: var(--primary-color); border-radius: 5px; }
+
 /* Tooltip styles */
 .tooltip-container {
   position: relative;
@@ -431,9 +438,19 @@ h3 {
   display: block;
 }
 
+/* Define the style for an header footer div element with icons */
+.MbfWindowHeaderFooterIcons {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+  padding: 0px 10px;
+  gap: 10px;
+}
+
 /* Define the style for the header element */
 .MbfWindowHeader {
-  display: 'flex';
+  display: flex;
+  flex-direction: row;
   align-items: center;
   width: 100%;
   border-bottom: 1px solid var(--table-border-color);
@@ -456,14 +473,14 @@ h3 {
 
 /* Define the style for the footer element */
 .MbfWindowFooter {
-  display: 'flex';
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   color: var(--footer-text-color);
   background-color: var(--footer-bg-color);
   margin: 0px;
-  padding: 10px;
-  padding-top: 0px;
+  padding: 0px;
 }
 
 /* Define the style for the footer text element */
@@ -474,6 +491,8 @@ h3 {
   text-align: center;
   margin: 0px;
   padding: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 /* Define the style for the body element */
