--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -328,11 +328,12 @@ html {
 nav {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 /* Navigation in Header.js style */
 .nav-link {
-  margin: 0 10px;
+  margin: 0;
   font-size: 20px;
   text-decoration: none;
   color: var(--main-icon-color);
